# CP-GENIE

./: .env.example  .gitignore  CP_Genie_test.ipynb  README.md  pyproject.toml  requirements.txt  scrape.py  scrape_test.ipynb  sitemap_urls.txt
data/processed/metadata/: blog__archives__34948__95def7b9.json  blog__archives__35393__f386fb72.json  blog__archives__48__7bb9958e.json  future__bachelor2018__699193c2.json  wp-content__uploads__2019__03__Chula_BEng_CP_Curriculum2018.jpg__5aad9feb.json  wp-content__uploads__2025__03__QE-2-67.pdf__fc7d916e.json  wp-content__uploads__2025__04__S__19505293-820x1024.jpg__0eb5bbc5.json
data/processed/text/: blog__archives__34948__95def7b9.txt  blog__archives__35393__f386fb72.txt  blog__archives__48__7bb9958e.txt  future__bachelor2018__699193c2.txt
data/raw/html/: blog__archives__34948__95def7b9.html  blog__archives__35393__f386fb72.html  blog__archives__48__7bb9958e.html  future__bachelor2018__699193c2.html
notebooks/evaluation/: evaluation.ipynb  generate_evalset.ipynb  test_questions.json
notebooks/evaluation/old/: testset.csv  testset.jsonl
src/: run.py
src/api/: main.py
src/api/core/: cache.py
src/api/router/: agentic.py  chat.py  normal.py
src/api/schema/: chat.py
src/api/utils/: error_handlers.py
src/chat/: chat.py  main.py
src/cp_genie/: main.py
src/cp_genie/api/v1/: router.py  schema.py
src/cp_genie/core/: config.py  logging.py
src/cp_genie/domain/rag/: base.py  normal.py
src/cp_genie/infrastructure/: chat_memory.py  llm.py  qdrant.py  redis.py
src/data/: scrape.py  store.py
src/model/agentic/: tool_graph.py
src/model/embedding/: embedder.py
src/model/generator/: generate.py
src/model/memory/: chat_memory.py
src/model/retriever/: retrieve.py
