[project]
name = "cp-genie"
version = "0.1.0"
description = "RAG chatbot system for CP chula"
authors = [
    {name = "Thiraput01",email = "Thiraputball@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain>=0.1.18",
    "langchain-google-genai",
    "langchain-huggingface",
    "langchain-qdrant",
    "langchain-community",
    "langchain-core",
    "langgraph",
    "redis",
    "langchain-redis",
    "sentence-transformers",
    "qdrant-client",
    "fastembed",
    "datasets",
    "pandas",
    "tqdm",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "cp_genie", from = "src" }
]

[tool.poetry.scripts]
start = "run:main"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ipykernel = "*"
black = "*"
isort = "*"
pytest = "*"